<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:paddingBottom="5dp">

        <LinearLayout
            android:id="@+id/product_page_title_layout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="vertical"
            android:tag="sticky-on_click_go_back">
            ¬

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:maxLines="2"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Google" />

                    <TextView
                        android:id="@+id/tv_detail_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#565656"
                        android:textSize="14sp"
                        tools:text="google" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFDFDFDF" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_detail_avatar"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_below="@id/product_page_title_layout"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp">

            <ImageView
                android:id="@+id/iv_detail_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="2dp"
                android:padding="5dp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/product_page_price_ratings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_detail_avatar"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/url_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:tag="check_for_delivery_details"
                    android:textColor="#175AAC"
                    android:textSize="14sp"
                    tools:text="http://www.google.com" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#EBEBEB" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_page_spec_summary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_page_price_ratings_layout"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/repo_label"
                android:layout_width="0px"
                android:layout_height="32dp"
                android:layout_marginRight="10dp"
                android:layout_weight="50"
                android:background="#484855"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:tag="open_specifications_page"
                android:text="@string/repo"
                android:textColor="#D8DEE7"
                android:textSize="11dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_page_seller_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_page_spec_summary_layout"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal"
            android:tag="open_seller_info">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="80"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#175AAC"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_page_seller_info_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_page_seller_info_layout"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal"
            android:tag="open_seller_info">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="80"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repo_url_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/url"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_repo_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#175AAC"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#FFDFDFDF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_page_seller_info_layout1"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal"
            android:tag="open_more_sellers_page">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="268"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_repo_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>