<resources>
    <string name="app_name">Top-Github</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="url">Url</string>
    <string name="repo">Repo</string>
    <string name="description">Description</string>
    <string name="empty_repository_list">Repository List Is Empty.</string>
    <string name="error">An Error Occurred While Loading Data!.</string>
</resources>
